--- a/personal_website/src/sass/Footer.scss
+++ b/personal_website/src/sass/Footer.scss
@@ -1,8 +1,13 @@
 // Footer Container
 .footer-container {
   position: absolute;
-  bottom: 2%;
-
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 6%;
+  overflow: hidden;
+  background-color: black;
+  display: grid;
 }
 // Footer and Icon Styling
 .footer {
